--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -103,8 +103,13 @@
                       %span Give it a try!
                 - if @cms_config['website']['logo_position'] == "top" or @admin
                   #logo
-                    = image_tag("/plugin_assets/victory_gyms/images/v-logo.png", :alt => "Victory Gyms", :id => "victory-logo")
-                    = image_tag("/plugin_assets/victory_gyms/images/victory-gyms.png", :alt => "Victory Gyms")
+                    = link_to(image_tag("/plugin_assets/victory_gyms/images/v-logo.png", :alt => "Victory MMA and Fitness", :title => "Victory MMA and Fitness", :id => "victory-logo"), "/")
+                    = link_to(image_tag("/plugin_assets/victory_gyms/images/victory-gyms.png", :alt => "Victory MMA and Fitness", :title => "Victory MMA and Fitness"), "/")
+                  #header-links
+                    = link_to(image_tag("/plugin_assets/victory_gyms/images/facebook-button.gif", :alt => "Facebook"), "http://www.facebook.com")
+                    = link_to(image_tag("/plugin_assets/victory_gyms/images/twitter-button.gif", :alt => "Twitter"), "http://www.twitter.com")
+                    = link_to(image_tag("/plugin_assets/victory_gyms/images/rss-button.gif", :alt => "RSS Feed"), "/article.rss")
+                    = link_to(image_tag("/plugin_assets/victory_gyms/images/shop-online-button.gif", :alt => "Shop Online"), "/products", :id => "shop-online")
                   = clear if @admin
                 - if !@settings.header_right_file_name.blank? and !@admin
                   #header-right
