--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -144,11 +144,16 @@
             #footer-outer
               #footer-middle
                 #footer-inner
+                  = link_to(image_tag("/plugin_assets/victory_gyms/images/victory-logo-footer.png", :alt => "Victory MMA and Fitness"), "/", :id => "footer-logo")
                   = render :partial => "/layouts/footer_menu"
-                  = @settings.footer_text.gsub('#YEAR#', Date.today.year.to_s)
+                  = clear
+                  #footer-links
+                    = link_to(image_tag("/plugin_assets/victory_gyms/images/facebook-button.gif", :alt => "Facebook"), "http://www.facebook.com")
+                    = link_to(image_tag("/plugin_assets/victory_gyms/images/twitter-button.gif", :alt => "Twitter"), "http://www.twitter.com")
+                    = link_to(image_tag("/plugin_assets/victory_gyms/images/rss-button.gif", :alt => "RSS Feed"), "/article.rss")
                   #footer_credits
-                    Powered by 
-                    = link_to "SiteNinja CMS.", "http://www.site-ninja.com"
+                    = @settings.footer_text.gsub('#YEAR#', Date.today.year.to_s)
+
     - if Rails.env.production? and !@admin and !@settings.tracking_code.blank?
       = @settings.tracking_code
   = yield :footer if @content_for_footer
