--- a/app/views/profiles/index.html.haml
+++ b/app/views/profiles/index.html.haml
@@ -17,6 +17,6 @@
 
 = render :partial => "pages/sidebar"
 
-- content for :head do
+- content_for :head do
   %style{:type => "text/css"}
     div#profile-thumb-image { float: left; margin: 0 20px 0 0 ; }
