--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -96,7 +96,7 @@
         Event.observe(window, 'load', function() {
         = yield :onload
         });
-  %body{:id => (@admin ? "admin" : "public")}
+  %body{:id => (@admin ? "admin" : "public"), :onload => "ImageBook()"}
     = #debug Draft.first
     - #parsed_json = ActiveSupport::JSON.decode(Draft.first.draft_fields)
     = #debug parsed_json.values.first
@@ -118,11 +118,11 @@
                     = link_to(image_tag("/plugin_assets/victory_gyms/images/v-logo.png", :alt => "Victory MMA and Fitness", :title => "Victory MMA and Fitness", :id => "victory-logo"), "/")
                     = link_to(image_tag("/plugin_assets/victory_gyms/images/victory-gyms.png", :alt => "Victory MMA and Fitness", :title => "Victory MMA and Fitness", :id => "victory-title"), "/")
                   #header-links
-                    = link_to(image_tag("/plugin_assets/victory_gyms/images/facebook-button.gif", :alt => "Facebook"), "http://www.facebook.com")
+                    = link_to(image_tag("/plugin_assets/victory_gyms/images/facebook-button.gif", :alt => "Facebook"), "http://www.facebook.com/victorygyms")
                     = link_to(image_tag("/plugin_assets/victory_gyms/images/twitter-button.gif", :alt => "Twitter"), "http://www.twitter.com/victory_mma_bjj")
                     = link_to(image_tag("/plugin_assets/victory_gyms/images/youtube-button.gif", :alt => "YouTube"), "http://www.youtube.com/throwdownelitesd")
                     = link_to(image_tag("/plugin_assets/victory_gyms/images/shop-online-button.gif", :alt => "Shop Online"), "/products", :id => "shop-online")
-                    = link_to(image_tag("/plugin_assets/victory_gyms/images/send-info-button.png", :alt => "Send Franchise Information"), "/franchise-opportunity", :id => "send-info")
+                    = link_to(image_tag("/plugin_assets/victory_gyms/images/franchise-button.jpg", :alt => "Send Franchise Information"), "/franchise-opportunity", :id => "send-info")
                   = clear if @admin
                 - if !@settings.header_right_file_name.blank? and !@admin
                   #header-right
@@ -161,7 +161,7 @@
                   = render :partial => "/layouts/footer_menu"
                   = clear
                   #footer-links
-                    = link_to(image_tag("/plugin_assets/victory_gyms/images/facebook-button.gif", :alt => "Facebook"), "http://www.facebook.com")
+                    = link_to(image_tag("/plugin_assets/victory_gyms/images/facebook-button.gif", :alt => "Facebook"), "http://www.facebook.com/victorygyms")
                     = link_to(image_tag("/plugin_assets/victory_gyms/images/twitter-button.gif", :alt => "Twitter"), "http://www.twitter.com")
                     = link_to(image_tag("/plugin_assets/victory_gyms/images/rss-button.gif", :alt => "RSS Feed"), "/article.rss")
                   #footer_credits
