added yelp icon to footer

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -163,6 +163,7 @@
                   #footer-links
                     = link_to(image_tag("/plugin_assets/victory_gyms/images/facebook-button.gif", :alt => "Facebook"), "http://www.facebook.com/victorygyms")
                     = link_to(image_tag("/plugin_assets/victory_gyms/images/twitter-button.gif", :alt => "Twitter"), "http://www.twitter.com")
+                    = link_to(image_tag("/plugin_assets/victory_gyms/images/yelp-button.gif", :alt => "Yelp"), "http://www.yelp.com")
                     = link_to(image_tag("/plugin_assets/victory_gyms/images/rss-button.gif", :alt => "RSS Feed"), "/article.rss")
                   #footer_credits
                     = @settings.footer_text.gsub('#YEAR#', Date.today.year.to_s)
