--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -122,7 +122,7 @@
                     = link_to(image_tag("/plugin_assets/victory_gyms/images/twitter-button.gif", :alt => "Twitter"), "http://www.twitter.com/victory_mma_bjj")
                     = link_to(image_tag("/plugin_assets/victory_gyms/images/youtube-button.gif", :alt => "YouTube"), "http://www.youtube.com/throwdownelitesd")
                     = link_to(image_tag("/plugin_assets/victory_gyms/images/shop-online-button.gif", :alt => "Shop Online"), "/products", :id => "shop-online")
-                    = link_to(image_tag("/plugin_assets/victory_gyms/images/franchise-button.jpg", :alt => "Send Franchise Information"), "/franchise-opportunity", :id => "send-info")
+                    = link_to(image_tag("/plugin_assets/victory_gyms/images/franchise-button.jpg", :alt => "Send Franchise Information"), "/franchise-opportunities", :id => "send-info")
                   = clear if @admin
                 - if !@settings.header_right_file_name.blank? and !@admin
                   #header-right
