--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -162,8 +162,8 @@
                   = clear
                   #footer-links
                     = link_to(image_tag("/plugin_assets/victory_gyms/images/facebook-button.gif", :alt => "Facebook"), "http://www.facebook.com/victorygyms")
-                    = link_to(image_tag("/plugin_assets/victory_gyms/images/twitter-button.gif", :alt => "Twitter"), "http://www.twitter.com")
-                    = link_to(image_tag("/plugin_assets/victory_gyms/images/yelp-button.gif", :alt => "Yelp"), "http://www.yelp.com")
+                    = link_to(image_tag("/plugin_assets/victory_gyms/images/twitter-button.gif", :alt => "Twitter"), "http://www.twitter.com/victory_mma_bjj")
+                    = link_to(image_tag("/plugin_assets/victory_gyms/images/yelp-button.gif", :alt => "Yelp"), "http://www.yelp.com/biz/victory-mma-and-fitness-san-diego-2")
                     = link_to(image_tag("/plugin_assets/victory_gyms/images/rss-button.gif", :alt => "RSS Feed"), "/article.rss")
                   #footer_credits
                     = @settings.footer_text.gsub('#YEAR#', Date.today.year.to_s)
