--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -124,7 +124,7 @@
                     = link_to(image_tag("/plugin_assets/victory_gyms/images/v-logo.png", :alt => "Victory MMA and Fitness", :title => "Victory MMA and Fitness", :id => "victory-logo"), "/")
                     = link_to(image_tag("/plugin_assets/victory_gyms/images/victory-gyms.png", :alt => "Victory MMA and Fitness", :title => "Victory MMA and Fitness", :id => "victory-title"), "/")
                   #header-links
-                    = link_to(image_tag("http://s3.amazonaws.com/siteninja/victorygyms-com/1309304263/original/Gracie-Jiu_Jitsu.png", :alt => "Facebook"), "http://www.facebook.com/victorygyms")
+                    = link_to(image_tag("http://s3.amazonaws.com/siteninja/victorygyms-com/1309304263/original/Gracie-Jiu_Jitsu.png", :alt => "Gracie Humaita"), "/gracie-humaita")
                     = link_to(image_tag("/plugin_assets/victory_gyms/images/facebook-button.gif", :alt => "Facebook"), "http://www.facebook.com/victorygyms")
                     = link_to(image_tag("/plugin_assets/victory_gyms/images/twitter-button.gif", :alt => "Twitter"), "http://www.twitter.com/victory_mma_bjj")
                     = link_to(image_tag("/plugin_assets/victory_gyms/images/youtube-button.gif", :alt => "YouTube"), "http://www.youtube.com/throwdownelitesd")
