--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -7,19 +7,29 @@
       %meta{:name => "description", :content => yield(:meta_description).strip }
     - # This rather lengthy section of the head includes all javascripts and stylesheets used throughout the application, included depending upon specific conditions of the view
     - # Include jQuery and jQuery Tools
-    = javascript_include_tag "http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.js"
-    = javascript_include_tag "http://ajax.googleapis.com/ajax/libs/jqueryui/1.7.2/jquery-ui.min.js"
+    = javascript_include_tag "http://ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.js"
+    = javascript_include_tag "http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.6/jquery-ui.min.js"
     = javascript_include_tag "/plugin_assets/siteninja_core/javascripts/animatedcollapse.js"
     = #javascript_include_tag "http://cdn.jquerytools.org/1.0.2/jquery.tools.min.js"
     = #javascript_include_tag "http://cdn.jquerytools.org/1.1.2/jquery.tools.min.js"
-    = javascript_include_tag "/plugin_assets/siteninja_core/javascripts/jquery.tools.min.js"
+    - if @calendar_select
+      = stylesheet_link_tag "/plugin_assets/siteninja_core/stylesheets/jquery-ui-1.8.6.custom.css"
+      = javascript_include_tag "/plugin_assets/siteninja_core/javascripts/jquery-ui-timepicker-addon.js"
+      :javascript
+        jQuery(document).ready(function($) {
+        $('.datetimepicker').datetimepicker({
+        ampm: true
+        });
+        });
+    - else
+      = javascript_include_tag "/plugin_assets/siteninja_core/javascripts/jquery.tools.min.js"
     - # noConflict makes jQuery play nicely with Prototype
     = javascript_tag "jQuery.noConflict();"
     = javascript_tag "var AUTH_TOKEN = #{form_authenticity_token.inspect};" if protect_against_forgery? # Enable jQuery to asyncronously call the app
     - # Include Fancybox for inline pop-ups
-    = javascript_include_tag "/plugin_assets/siteninja_core/jquery.fancybox/jquery.fancybox-1.2.1.js"
-    = javascript_include_tag "/plugin_assets/siteninja_core/jquery.fancybox/jquery.easing.1.3.js"
-    = stylesheet_link_tag "/plugin_assets/siteninja_core/jquery.fancybox/jquery.fancybox.css"
+    = javascript_include_tag "/plugin_assets/siteninja_core/jquery.fancybox-1.3.4/fancybox/jquery.fancybox-1.3.4.js"
+    = javascript_include_tag "/plugin_assets/siteninja_core/jquery.fancybox-1.3.4/fancybox/jquery.easing-1.3.pack.js"
+    = stylesheet_link_tag "/plugin_assets/siteninja_core/jquery.fancybox-1.3.4/fancybox/jquery.fancybox-1.3.4.css"
     = javascript_include_tag "/plugin_assets/siteninja_core/javascripts/ninja_fancy.js"
     - # Include Prototype and Scriptaculous
     = javascript_include_tag :defaults
@@ -70,21 +80,15 @@
     
     - # Include galleryview for slideshow if one is used.
     - if @slideshow
-      - if @cms_config['site_settings']['wide_feature_box']
-        = stylesheet_link_tag "/plugin_assets/siteninja_core/jquery-galleryview-1.1/galleryview.css"
-        = javascript_include_tag "/plugin_assets/siteninja_core/jquery-galleryview-1.1/jquery.galleryview-1.1.js"
-        = javascript_include_tag "/plugin_assets/siteninja_core/jquery-galleryview-1.1/jquery.timers-1.1.2.js"
-        = javascript_include_tag "/plugin_assets/siteninja_core/javascripts/ninja_slideshow.js"
-      - else
-        = stylesheet_link_tag "/plugin_assets/siteninja_core/jquery-galleryview-3.0b3/css/jquery.galleryview-3.0.css"
-        = javascript_include_tag "/plugin_assets/siteninja_core/jquery-galleryview-3.0b3/js/jquery.galleryview-3.0.js"
-        = javascript_include_tag "/plugin_assets/siteninja_core/jquery-galleryview-3.0b3/js/jquery.timers-1.2.js"
+      = stylesheet_link_tag "/plugin_assets/siteninja_core/jquery-galleryview-3.0b3/css/jquery.galleryview-3.0.css"
+      = javascript_include_tag "/plugin_assets/siteninja_core/jquery-galleryview-3.0b3/js/jquery.galleryview-3.0.js"
+      = javascript_include_tag "/plugin_assets/siteninja_core/jquery-galleryview-3.0b3/js/jquery.timers-1.2.js"
       = javascript_include_tag "/plugin_assets/siteninja_core/javascripts/ninja_slideshow.js"
-    = stylesheet_link_tag "/plugin_assets/siteninja_core/stylesheets/print.css", :media => "print"
     - if @cms_config['site_settings']['dropdown_menus']
-      = javascript_include_tag "/plugin_assets/victory_gyms/javascripts/ddsmoothmenu.js"
-      = stylesheet_link_tag "/plugin_assets/victory_gyms/javascripts/ddsmoothmenu.css"
+      = javascript_include_tag "/plugin_assets/siteninja_core/javascripts/ddsmoothmenu.js"
+      = stylesheet_link_tag "/plugin_assets/siteninja_core/javascripts/ddsmoothmenu.css"
       :javascript
+        function init_ddsmoothmenu() {
         ddsmoothmenu.init({
         mainmenuid: "menu-middle", //menu DIV id
         orientation: 'h', //Horizontal or vertical menu: Set to "h" or "v"
@@ -92,11 +96,20 @@
         //customtheme: ["#1c5a80", "#18374a"],
         contentsource: "markup" //"markup" or ["container_id", "path_to_menu_file"]
         })
+        };
+      - content_for :onload do
+        init_ddsmoothmenu()
+    = stylesheet_link_tag "/plugin_assets/siteninja_core/stylesheets/print.css", :media => "print"
     - if !@settings.favicon_file_name.blank?
       %link{:rel => "shortcut icon", :href => @settings.favicon(:original)}    
     = yield :head # For scripts and styles specific to view
     = yield :styles
-    = @cms_config['site_settings']['head_script']
+    - if @admin # only needed if in the CMS admin sections
+      = stylesheet_link_tag "/plugin_assets/siteninja_core/stylesheets/admin.css"
+      = stylesheet_link_tag "/plugin_assets/siteninja_galleries/stylesheets/admin_galleries.css"
+      = include_tiny_mce_if_needed
+        
+    = @cms_config['site_settings']['head_script'] unless @admin
     - if @content_for_onload
       %script{:type => "text/javascript"}
         Event.observe(window, 'load', function() {
