--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -103,8 +103,8 @@
       = javascript_include_tag "/plugin_assets/siteninja_core/jquery-galleryview-3.0b3/js/jquery.timers-1.2.js"
       = javascript_include_tag "/plugin_assets/siteninja_core/javascripts/ninja_slideshow.js"
     - if @cms_config['site_settings']['dropdown_menus']
-      = javascript_include_tag "/plugin_assets/siteninja_core/javascripts/ddsmoothmenu.js"
-      = stylesheet_link_tag "/plugin_assets/siteninja_core/javascripts/ddsmoothmenu.css"
+      = javascript_include_tag "http://s3.amazonaws.com/siteninja/plugin_assets/siteninja_core/javascripts/ddsmoothmenu.js"
+      = stylesheet_link_tag "http://s3.amazonaws.com/siteninja/plugin_assets/siteninja_core/javascripts/ddsmoothmenu.css"
       :javascript
         function init_ddsmoothmenu() {
         ddsmoothmenu.init({
