--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -98,10 +98,10 @@
     
     - # Include galleryview for slideshow if one is used.
     - if @slideshow
-      = stylesheet_link_tag "/plugin_assets/siteninja_core/jquery-galleryview-3.0b3/css/jquery.galleryview-3.0.css"
-      = javascript_include_tag "/plugin_assets/siteninja_core/jquery-galleryview-3.0b3/js/jquery.galleryview-3.0.js"
-      = javascript_include_tag "/plugin_assets/siteninja_core/jquery-galleryview-3.0b3/js/jquery.timers-1.2.js"
-      = javascript_include_tag "/plugin_assets/siteninja_core/javascripts/ninja_slideshow.js"
+      = stylesheet_link_tag "http://s3.amazonaws.com/siteninja/plugin_assets/siteninja_core/jquery-galleryview-3.0b3/css/jquery.galleryview-3.0.css"
+      = javascript_include_tag "http://s3.amazonaws.com/siteninja/plugin_assets/siteninja_core/jquery-galleryview-3.0b3/js/jquery.galleryview-3.0.js"
+      = javascript_include_tag "http://s3.amazonaws.com/siteninja/plugin_assets/siteninja_core/jquery-galleryview-3.0b3/js/jquery.timers-1.2.js"
+      = javascript_include_tag "http://s3.amazonaws.com/siteninja/plugin_assets/siteninja_core/javascripts/ninja_slideshow.js"
     - if @cms_config['site_settings']['dropdown_menus']
       = javascript_include_tag "http://s3.amazonaws.com/siteninja/plugin_assets/siteninja_core/javascripts/ddsmoothmenu.js"
       = stylesheet_link_tag "http://s3.amazonaws.com/siteninja/plugin_assets/siteninja_core/javascripts/ddsmoothmenu.css"
