--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -16,7 +16,7 @@
     = #javascript_include_tag "http://cdn.jquerytools.org/1.1.2/jquery.tools.min.js"
     - if @calendar_select
       = stylesheet_link_tag "/plugin_assets/siteninja_core/stylesheets/jquery-ui-1.8.6.custom.css"
-      = javascript_include_tag "/plugin_assets/siteninja_core/javascripts/jquery-ui-timepicker-addon.js"
+      = javascript_include_tag "http://s3.amazonaws.com/siteninja/plugin_assets/siteninja_core/javascripts/jquery-ui-timepicker-addon.js"
       :javascript
         jQuery(document).ready(function($) {
         $('.datetimepicker').datetimepicker({
@@ -24,20 +24,21 @@
         });
         });
     - else
-      = javascript_include_tag "/plugin_assets/siteninja_core/javascripts/jquery.tools.min.js"
+      = javascript_include_tag "http://jquerytools.flowplayer.netdna-cdn.com/1.2.6/all/jquery.tools.min.js"
+    = javascript_include_tag "/plugin_assets/siteninja_core/javascripts/cookie.js" if @cookie
     - # noConflict makes jQuery play nicely with Prototype
     = javascript_tag "jQuery.noConflict();"
     = javascript_tag "var AUTH_TOKEN = #{form_authenticity_token.inspect};" if protect_against_forgery? # Enable jQuery to asyncronously call the app
     - # Include Fancybox for inline pop-ups
-    = javascript_include_tag "/plugin_assets/siteninja_core/jquery.fancybox-1.3.4/fancybox/jquery.fancybox-1.3.4.js"
-    = javascript_include_tag "/plugin_assets/siteninja_core/jquery.fancybox-1.3.4/fancybox/jquery.easing-1.3.pack.js"
-    = stylesheet_link_tag "/plugin_assets/siteninja_core/jquery.fancybox-1.3.4/fancybox/jquery.fancybox-1.3.4.css"
-    = javascript_include_tag "/plugin_assets/siteninja_core/javascripts/ninja_fancy.js"
+    = javascript_include_tag "http://s3.amazonaws.com/siteninja/plugin_assets/siteninja_core/jquery.fancybox-1.3.4/fancybox/jquery.fancybox-1.3.4.js"
+    = #javascript_include_tag "http://s3.amazonaws.com/siteninja/plugin_assets/siteninja_core/jquery.fancybox-1.3.4/fancybox/jquery.easing-1.3.pack.js"
+    = stylesheet_link_tag "http://s3.amazonaws.com/siteninja/plugin_assets/siteninja_core/jquery.fancybox-1.3.4/fancybox/jquery.fancybox-1.3.4.css"
+    = javascript_include_tag "/javascripts/#{@script_prefix}ninja_fancy.js"
     - # Include Prototype and Scriptaculous
     = javascript_include_tag :defaults
-    = javascript_include_tag "/plugin_assets/siteninja_core/javascripts/sortable_tree.js"
+    = javascript_include_tag "http://s3.amazonaws.com/siteninja/plugin_assets/siteninja_core/javascripts/sortable_tree.js"
     = # javascript_include_tag "http://ajax.googleapis.com/ajax/libs/scriptaculous/1.8.2/scriptaculous.js"
-    = javascript_include_tag "/plugin_assets/siteninja_core/javascripts/application.js"
+    = javascript_include_tag "/javascripts/#{@script_prefix}application.js"
     - # Global styles
     = stylesheet_link_tag "/plugin_assets/siteninja_core/stylesheets/application.css"
     - # Styles to include if site uses specific modules
@@ -51,15 +52,6 @@
       = javascript_include_tag "/plugin_assets/siteninja_store/javascripts/jquery.formatCurrency-1.3.0.min.js"  
     - if logged_in? # admin is logged in
       = stylesheet_link_tag "/plugin_assets/siteninja_core/stylesheets/admin_menu.css"
-      - # Textile includes are commented out until implemented
-      - # = javascript_include_tag "markitup/jquery.markitup"
-      - # = javascript_include_tag "markitup/sets/textile/set"
-      - # = stylesheet_link_tag "/javascripts/markitup/skins/markitup/style.css"
-      - # = stylesheet_link_tag "/javascripts/markitup/sets/textile/style.css"
-      - if @admin # only needed if in the CMS admin sections
-        = stylesheet_link_tag "/plugin_assets/siteninja_core/stylesheets/admin.css"
-        = stylesheet_link_tag "/plugin_assets/siteninja_galleries/stylesheets/admin_galleries.css"
-        = include_tiny_mce_if_needed
       - if current_user
         <!--[if lt IE 8]>
         %style{:tyle => "text/css"}
@@ -69,8 +61,8 @@
     - if @tmplate
       - if !@tmplate.stylesheet.blank?
         = stylesheet_link_tag "/templates/#{@tmplate.id}/stylesheet.css"
-      - elsif !@global_template.stylesheet.blank?
-        = stylesheet_link_tag "/templates/#{@global_template.id}/stylesheet.css"
+      - elsif !@settings.stylesheet.blank?
+        = stylesheet_link_tag "/stylesheet.css"
       -else
         - unless session[:template]
           = stylesheet_link_tag "/plugin_assets/siteninja_core/templates/#{@cms_config['website']['template']}"
@@ -79,12 +71,12 @@
             = stylesheet_link_tag "/plugin_assets/siteninja_core/templates/#{@cms_config['website']['template']}"
           - else
             = stylesheet_link_tag "/plugin_assets/siteninja_core/templates/#{session[:template]}"
-    - elsif !@global_template.stylesheet.blank?
+    - elsif !@settings.stylesheet.blank?
       -if controller_name == "sessions"
         %style{:type => "text/css"}
-          = @global_template.stylesheet
+          = @settings.stylesheet
       -else
-        = stylesheet_link_tag "/templates/#{@global_template.id}/stylesheet.css"
+        = stylesheet_link_tag "/stylesheet.css"
     - else
       - unless session[:template]
         = stylesheet_link_tag "/plugin_assets/siteninja_core/templates/#{@cms_config['website']['template']}"
@@ -93,11 +85,10 @@
     - if @tmplate
       - if !@tmplate.additional_styles.blank?
         = stylesheet_link_tag "/templates/#{@tmplate.id}/additional_styles.css"
-      - elsif !@global_template.additional_styles.blank?
-        = stylesheet_link_tag "/templates/#{@global_template.id}/additional_styles.css"
-    - elsif !@global_template.additional_styles.blank?
-      = stylesheet_link_tag "/templates/#{@global_template.id}/additional_styles.css"
-    
+      - elsif !@settings.additional_styles.blank?
+        = stylesheet_link_tag "/stylesheet/additional_styles.css"
+    - elsif !@settings.additional_styles.blank?
+      = stylesheet_link_tag "/stylesheet/additional_styles.css"
     - # Include galleryview for slideshow if one is used.
     - if @slideshow
       = stylesheet_link_tag "http://s3.amazonaws.com/siteninja/plugin_assets/siteninja_core/jquery-galleryview-3.0b3/css/jquery.galleryview-3.0.css"
